# rpg_kata_cpp

./: .clang-format  CMakeLists.txt  README.md
.github/workflows/: compile_and_tests_all_commits.yml
src/: CMakeLists.txt  character.hpp  character_health.hpp  character_stats.hpp  character_status.hpp  coordinate.hpp  damage.hpp  damageable_health.hpp  deal_damage.hpp  faction.hpp  heal.hpp  healing.hpp  healing_magical_object.hpp  healing_magical_object_health.hpp  health.hpp  level.hpp  magical_object.hpp  magical_object_health.hpp  magical_weapon.hpp  magical_weapon_health.hpp  new_type.hpp  non_negative_double.hpp  percentage.hpp  position.hpp  range.hpp  rpg_kata.cpp  status.hpp  thing.hpp  thing_health.hpp  value_wrapper.hpp
tests/: CMakeLists.txt  character_tests.cpp  damage_tests.cpp  faction_tests.cpp  healing_tests.cpp  leveling_tests.cpp  magical_object_tests.cpp  test.cpp  thing_tests.cpp
